--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -1,5 +1,4 @@
 .Category_conteiner{
-  background-color: blue;
-  height: 100px;
-  width: 200px;
+  background-color: lightcyan;
+  height: 100vh;
 }
