--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,17 @@
-.App {
-  text-align: center;
+
+.App__header{
+  height: 15vh;
+  border: 2px solid black;
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
+.App__footer{
+  height: 15vh;
+  border: 2px solid black;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
+.App__routeField{
+  height: 100vh;
+  border: 2px solid black;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
