--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,4 +1,3 @@
-@import '~antd/dist/antd.css';
 
 .App {
   text-align: center;
@@ -10,4 +9,5 @@
 .Footer_conteiner{
   background-color: darkgray;
   min-height: 50px;
+  height: 15vh;
 }
