--- a/src/components/HeaderCategory.css
+++ b/src/components/HeaderCategory.css
@@ -4,3 +4,16 @@
   min-height: 20px;
 
 }
+.HeaderCategory_Line{
+  display: inline-block;
+  padding: 0px;
+  width: calc((100% -10px) /6 );
+  text-align: center;
+  border: 1px solid  gray;
+  box-sizing: border-box;
+
+}
+.HeaderCategory_Line img {
+  padding-left: 3px;
+
+}
