--- a/src/components/LoginBar.css
+++ b/src/components/LoginBar.css
@@ -1,5 +1,19 @@
-.LoginBar_conteiner{
-  display: inline;
-  border: solid 2px black;
-  float: right;
+.LoginBar{
+
+  border: solid 1px black;
+  position: absolute;
+  top: 10px;
+  right: 30px;
+  font-size: 18px;
+  cursor: pointer;
+  color: rgb(46, 5, 65);
+  transition: color, right .22s ease-in;
+  z-index: 100;
+  background-color: magenta;
+}
+.LoginBar:hover {
+  color: black;
+}
+.LoginBar.open {
+  right: 250px;
 }
