--- a/src/components/ListProduct.css
+++ b/src/components/ListProduct.css
@@ -1,6 +1,12 @@
 .ListProduct{
-  border: 1px solid #ccc;
-  display: flex;
-  justify-content: center;
-  color: black;
+  border: 1px solid black;
+  display: inline-block;
+  padding: 0 5px;
+  min-width: 100px;
+  margin: 5px;
+}
+
+.ListProduct .img_product{
+  border: 1px solid black; 
+  padding: 2px;
 }
