--- a/src/components/CardProduct.css
+++ b/src/components/CardProduct.css
@@ -1,3 +1,13 @@
 .CardProduct{
-  
+  background-color: blueviolet;
+  height: 70vh;
+ 
+
 }
+.CardProduct .show_product{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content:space-evenly;
+}
+
