--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -1,4 +1,23 @@
-.Category_conteiner{
+.Category{
   background-color: lightcyan;
-  height: 100vh;
+  height: 70vh;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+}
+
+.Category .block_product{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content:space-evenly;
+  align-content: flex-start;
+  align-items: flex-end;
+  
+}
+.Category .filter_field{
+display: inline-block;
+height: 100%;
+border: 1px red solid;
+width: 250px;
 }
