--- a/src/components/ActiveProduct.css
+++ b/src/components/ActiveProduct.css
@@ -3,5 +3,12 @@
   min-width: 100px;
   text-align: center;
   color: black;
-  display: inline-block;
+
+  
 }
+/* внешние границы таблицы серого цвета толщиной 1px */
+table {border: 1px solid grey;} 
+/* границы ячеек первого ряда таблицы */
+th {border: 1px solid grey;}
+/* границы ячеек тела таблицы */
+td {border: 1px solid grey;} 
