--- a/src/components/PersonalCabinet.css
+++ b/src/components/PersonalCabinet.css
@@ -8,11 +8,14 @@
 .PersonalCabinet a{
   color:black
 }
-.PersonalCabinet .imgProfile{
-  border: 1px solid black;
-  display: inline-block;
-  padding: 0px 15px;
-  height: 170px;
-  width: 150px;
+.PersonalCabinet .blockProduct{
+  /* border: 1px solid blue; */
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content:space-evenly;
+  align-content: flex-start;
+  align-items: flex-end;
+ 
   
 }
