--- a/src/components/ActiveProduct.css
+++ b/src/components/ActiveProduct.css
@@ -1,14 +1,46 @@
-.ActiveProduct{
+.ActiveProduct {
   border: 1px solid lightgreen;
-  min-width: 100px;
   text-align: center;
   color: black;
-
-  
+ 
 }
-/* внешние границы таблицы серого цвета толщиной 1px */
-table {border: 1px solid grey;} 
-/* границы ячеек первого ряда таблицы */
-th {border: 1px solid grey;}
-/* границы ячеек тела таблицы */
-td {border: 1px solid grey;} 
+
+
+
+.ActiveProduct .conteiner{
+   display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-content: flex-start;
+  align-items: center;
+}
+
+.ActiveProduct .table_info{
+  /* max-width: 70%; */
+}
+.ActiveProduct .table_info table{
+  max-width: 60%;
+  width:50%;
+  min-width: 400px; 
+  margin-right: 10px;
+}
+
+.ActiveProduct .table_info thead >tr >th{
+background: #fafafa91;
+padding: 5px 15px;
+}
+.ActiveProduct .table_info tbody >tr >td{
+  padding: 5px 15px;
+  
+  }
+  .ActiveProduct  .img_block{
+    margin: 0 auto;
+  }
+  .ActiveProduct .img_block img{
+    transform:  scale(1,1);
+
+    transition:0.3s linear;
+   }
+  .ActiveProduct .img_block img:hover{
+   transform:  scale(1.5,1.5)
+  }
