--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -1,6 +1,6 @@
 .Category{
   background-color: lightcyan;
-  height: 70vh;
+  min-height: 70vh;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
@@ -10,7 +10,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content:space-evenly;
+  justify-content:space-around;
   align-content: flex-start;
   align-items: flex-end;
   
@@ -18,6 +18,7 @@
 .Category .filter_field{
 display: inline-block;
 height: 100%;
-border: 2px red solid;
+border: 2px #185299 solid;
+border-radius: 5px;
 width: 200px;
 }
