--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,20 +1,26 @@
 .Header{
   background-color: gold;
-  border: 1px solid silver;
-  min-height: 15vh;
+  /* border: 1px solid silver; */
+  height: 15vh;
   box-sizing: border-box;
-
+  display: flex;
+flex-direction: column;
+align-content: flex-end;
+justify-content: flex-end;
 
 }
 .Header .banner_title_shop{
   display: inline-block;
-  font-size: 20px;
+  font-size: 30px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: blue;
   padding:0px 0px; 
-  border: 1px solid black;
 
 }
 .Header .banner_title_shop::first-letter{
   color:red;
+}
+.Header .HeaderCategory{
+  width: 100%;
+ align-self: flex-end;
 }
