--- a/src/components/SearchField.css
+++ b/src/components/SearchField.css
@@ -1,6 +1,7 @@
 .SearchField{
   width: 200px;
-  
+  padding-bottom: 10px;
+  padding-left: 5px;
 }
 .SearchField  .range_summ{
   padding: 0 10px;
