--- a/src/components/Loader.css
+++ b/src/components/Loader.css
@@ -1,7 +1,7 @@
 .center{
   text-align: center;
-  background-color: lightpink;
-  height:70vh;
+  background-color: lightcyan;
+  height:75vh;
   padding-top: 20%;
 }
 .Loader {
