--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,7 +7,7 @@
 flex-direction: column;
 align-content: flex-end;
 justify-content: flex-end;
-
+min-width: 360px;
 }
 .Header .banner_title_shop{
   display: inline-block;
