--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,14 +1,9 @@
 .Main_conteiner{
   background-color: lightskyblue;
+  min-height: 75vh;
 
 }
 
-.Main__FlexContainer{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  
-}
 
 
 .Main__FlexContainer__News div{
@@ -23,7 +18,9 @@
   font-size: 16px;
   font-weight: bold;
   color:black;
-  
+  box-shadow: inset 0px 0px 277px 3px #313233cc;
+  -webkit-box-shadow: inset 0px 0px 277px 3px #313233cc;
+  -ms-box-shadow:inset 0px 0px 277px 3px #313233cc;
 
 
 }
@@ -35,7 +32,27 @@
   /* border: 1px solid green; */
   width: 100%;
   justify-content: space-around;
- 
+ height: 100%;
+ align-content: space-around;
 }
 
+@media (max-width: 930px) {
+  
+  .Main__FlexContainer__News div{
+    /* border: 1px solid blue; */
+    max-height: 35vh;
+    max-width: 35vh;
+    min-width: 150px;
+    min-height: 150px;
+    height: 40vw;
+    width: 40vw;
+    margin: 2px 0px;
+ 
+    font-weight: bold;
+    color:black;
+    
+  
+  
+  }
 
+}
